--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 /* Your CSS Code here. */
 .holder{
 	display:flex;
-	justify-content:space-around;
+/* 	justify-content:space-around; */
+	justify-content:center;
 	flex-wrap:wrap;
 }
